[project]
name = "cebraem"
authors = [{name = "Julian Hennies", email = "hennies@embl.de"}]
description = "Toolkit for 3D Volume EM segmentation"
requires-python = ">=3.9"
license =  {text = "MIT License"}
readme= "README.md"
maintainers = [
  {name = "Jose Miguel Serra", email = "serrajosemi@gmail.com"}
]
classifiers = [
    "Framework :: napari",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/jhennies/CebraEM"

[options]
packages = find:
# for compiling and develop setup only
# no need to specify the versions so that we could
# compile for multiple targeted versions.
dependencies = [
    "snakemake"
    torch>=1.5
    numpy>=1.17
    napari[all]
    pyqt5
    h5py
    python-elf
    vigra
    mobie_utils==0.3
    scikit-image==0.19
    bioimageio.core
]
[options.extras_require]
all =
    scikit-image>=0.14.2
    pillow
    torchvision
    tqdm>=4.47.0
skimage =
    scikit-image>=0.14.2
pillow =
    pillow
tensorboard =
    tensorboard
ignite =
    pytorch-ignite==0.4.2
torchvision =
    torchvision
tqdm =
    tqdm>=4.47.0
psutil =
    psutil


[options.entry_points]
napari.manifest =
cebra-ann = cebra_ann:napari.yaml

[bdist_wheel]
universal = 1